<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoodTreeHole</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_title_treehole">树洞</string>
    <string name="str_treehole_login"><u>登录</u></string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="str_title_login">登录页面</string>
    <string name="str_username">用户名</string>
    <string name="str_password">密码</string>
    <string name="str_button_login">登录</string>
    <string name="str_button_logout">退出登录</string>
    <string name="str_forget_password">忘记密码</string>
    <string name="str_register">注册用户</string>
    <string name="str_title_user_info">个人信息</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="str_title_comment">评论页面</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="str_title_add">发布页面</string>
    <string name="str_tips_add">在此处分享您的心情</string>
    <string name="str_btn_refresh">刷新</string>
    <string name="str_loading">正在加载中……</string>

</resources>