<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/account_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/login_title_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_btn_background"
            android:src="@drawable/add_detail_title_back" />

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_title_login" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_edittext_bg"
                android:hint="@string/str_username"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingLeft="45dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="engle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_username"
                android:layout_alignLeft="@id/login_username"
                android:layout_alignTop="@id/login_username"
                android:layout_marginLeft="10dp"
                android:src="@drawable/login_edit_username" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_edittext_bg"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingLeft="45dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="123456" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_password"
                android:layout_alignLeft="@id/login_password"
                android:layout_alignTop="@id/login_password"
                android:layout_marginLeft="10dp"
                android:src="@drawable/login_edit_password" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_main_page_add_detail"
            android:padding="10dp"
            android:text="@string/str_button_login"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="15dp"
                android:text="@string/str_forget_password"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                android:text="@string/str_register"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>