<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/treehole_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:padding="10dp" >

        <TextView
            android:id="@+id/main_page_login"
            style="@style/treeHoleTitleUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_btn_background"
            android:padding="5dp"
            android:text="@string/str_treehole_login" />

        <TextView
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:text="@string/str_title_treehole" />

        <ImageView
            android:id="@+id/treehole_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_btn_background"
            android:padding="5dp"
            android:src="@drawable/treehole_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/treehole_title" >

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/refreshable_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.handmark.pulltorefresh.library.PullToRefreshListView>

        <ImageView
            android:id="@+id/wifi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_wifi"
            android:visibility="gone" />

        <TextView
            android:id="@+id/treehole_refresh"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifi_status"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_btn_background"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/str_btn_refresh"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/treehole_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/treehole_title"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/treehole_loading_progressbar"
            style="@style/publicloadingProgressStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/treehole_loading_progressbar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/str_loading"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>